--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="div-1">
             <h1 class="d-h1">
               Olá, mundo, eu sou o Augusto!
-              <img class="img-section" src="/imgs/computer-solid.png" alt="" />
+              <img class="img-section" src="/imgs/computer-solid.svg" alt="" />
             </h1>
             <p class="div-para">
               esse e meu espaço onde documento meus aprendizados como Software
