--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <h4>Super Mario</h4>
                 <div>
                   <p class="item-p">um site do super mario</p>
-                  <li class="pj-link"><a href="#">Visualizar</a></li>
+                  <li class="pj-link"><a href="https://super-mario-bros-azure.vercel.app/">Visualizar</a></li>
                 </div>
               </div>
             </div>
