--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
                     um site com carrossel de frutas e responsividade feito em
                     html,Css e Javascript
                   </p>
-                  <li class="pj-link"><a href="#">Visualizar</a></li>
+                  <li class="pj-link"><a href="https://slider-de-frutas.vercel.app/">Visualizar</a></li>
                 </div>
               </div>
               <div class="projetos-item">
                 <h4>Amazon</h4>
                 <div>
                   <p class="item-p">um clone na pagina principal da amazon</p>
-                  <li class="pj-link"><a href="#">Visualizar</a></li>
+                  <li class="pj-link"><a href="https://amazon-lac-six.vercel.app/">Visualizar</a></li>
                 </div>
               </div>
               <div class="projetos-item">
@@ -178,7 +178,7 @@
                   <p class="item-p">
                     o Spotify desenvolvidor com html,css e Javascript
                   </p>
-                  <li class="pj-link"><a href="#">Visualizar</a></li>
+                  <li class="pj-link"><a href="https://spotify-theta-pied.vercel.app/">Visualizar</a></li>
                 </div>
               </div>
               <div class="projetos-item">
@@ -188,28 +188,28 @@
                     um To Do list com funcionalidade de adicionar e concluir
                     tarefas
                   </p>
-                  <li class="pj-link"><a href="#">Visualizar</a></li>
+                  <li class="pj-link"><a href="https://to-do-list-5xhv.vercel.app/">Visualizar</a></li>
                 </div>
               </div>
               <div class="projetos-item">
                 <h4>Website</h4>
                 <div>
                   <p class="item-p">apenas um pequeno site </p>
-                  <li class="pj-link"><a href="#">Visualizar</a></li>
+                  <li class="pj-link"><a href="https://website-pi-self-90.vercel.app/">Visualizar</a></li>
                 </div>
               </div>
               <div class="projetos-item">
                 <h4>Formulario</h4>
                 <div>
                   <p class="item-p">um formulario otimizado e bem estilzado</p>
-                  <li class="pj-link"><a href="#">Visualizar</a></li>
+                  <li class="pj-link"><a href="https://formulario-henna-three.vercel.app/?name=&email=&phone=&company=&message=">Visualizar</a></li>
                 </div>
               </div>
               <div class="projetos-item">
                 <h4>Calculadora</h4>
                 <div>
                   <p class="item-p">uma calculadora de numeros</p>
-                  <li class="pj-link"><a href="#">Visualizar</a></li>
+                  <li class="pj-link"><a href="https://calculadora-sepia-nine.vercel.app/">Visualizar</a></li>
                 </div>
               </div>
               <div class="projetos-item">
